<?xml version="1.0"?>
<package>
  <name>asebaros_msgs</name>
  <version>0.1.0</version>
  <description>
    Bridge to access an Aseba network from ROS.
    For more information about Aseba, see: http://aseba.wikidot.com
  </description>

  <maintainer email="stephane@magnenat.net">Stéphane Magnenat</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/asebaros</url>
  <url type="repository">https://github.com/ethz-asl/ros-aseba</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
