<?xml version="1.0"?>
<package>
  <name>ethzasl_aseba</name>
  <version>0.1.0</version>
  <description>
    Bridge to access an Aseba network from ROS.
    For more information about aseba, see: http://aseba.wikidot.com
  </description>

  <maintainer email="stephane@magnenat.net">Stéphane Magnenat</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ethzasl_aseba</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
