<?xml version="1.0"?>
<package>
  <name>thymio_driver</name>
  <version>0.1.0</version>
  <description>
    Navigation driver for Thymio II robot

    This driver listens to cmd_vel and provides odometry for the Thymio II
    robot through asebaros.
  </description>

  <maintainer email="stephane@magnenat.net">Stéphane Magnenat</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/thymio_navigation_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>asebaros</build_depend> 
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>asebaros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
